--- a/build.gradle
+++ b/build.gradle
@@ -14,15 +14,9 @@ repositories {
 
 dependencies {
 	compile 'org.springframework.boot:spring-boot-starter-web:2.1.8.RELEASE'
-//	compile 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-server:2.1.3.RELEASE'
+	compile 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-server:2.1.3.RELEASE'
 //	compile 'org.springframework.cloud:spring-cloud-starter-security:2.1.3.RELEASE'
 //	compile 'org.springframework.ldap:spring-ldap-core:2.3.2.RELEASE'
 //	compile 'org.springframework.security:spring-security-ldap:5.1.5.RELEASE'
-//	testImplementation('org.springframework.boot:spring-boot-starter-test') {
-//		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
-//	}
 }
 
-//test {
-//	useJUnitPlatform()
-//}
