--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,12 @@
 plugins {
-	id 'org.springframework.boot' version '2.1.8.RELEASE'
-	id 'io.spring.dependency-management' version '1.0.10.RELEASE'
 	id 'java'
+	id 'application'
+	id 'maven-publish'
+	id 'maven'
+}
+
+application {
+	mainClass='com.example.eurekademo.EurekaDemoApplication'
 }
 
 group = 'com.example'
@@ -13,10 +18,38 @@ repositories {
 }
 
 dependencies {
-	compile 'org.springframework.boot:spring-boot-starter-web:2.1.8.RELEASE'
 	compile 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-server:2.1.3.RELEASE'
-//	compile 'org.springframework.cloud:spring-cloud-starter-security:2.1.3.RELEASE'
-//	compile 'org.springframework.ldap:spring-ldap-core:2.3.2.RELEASE'
-//	compile 'org.springframework.security:spring-security-ldap:5.1.5.RELEASE'
 }
+
+distributions {
+	main {
+		contents {
+			from('src/main/resources') {
+				into 'config'
+			}
+		}
+	}
+}
+
+publishing {
+	publications {
+		zip(MavenPublication) {
+			artifact source: distZip, extension: 'zip'
+		}
+	}
+
+	repositories {
+		maven {
+			name 'release'
+			credentials {
+				username 'admin'
+				password 'admin123'
+			}
+			url 'http://42.192.143.36:8081/repository/maven-releases/'
+		}
+	}
+}
+
+build.dependsOn distZip
+publish.dependsOn build
 
