--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,7 @@ repositories {
 }
 
 dependencies {
+	compile 'org.springframework.boot:spring-boot-starter-web:2.1.8.RELEASE'
 	compile 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-server:2.1.3.RELEASE'
 }
 
@@ -34,8 +35,10 @@ distributions {
 publishing {
 	publications {
 		zip(MavenPublication) {
+			artifactId 'aaa-bbb'
 			artifact source: distZip, extension: 'zip'
 		}
+
 	}
 
 	repositories {
