--- a/build.gradle
+++ b/build.gradle
@@ -1,70 +1,15 @@
-plugins {
-	id 'java'
-	id 'application'
-	id 'maven-publish'
-	id 'maven'
-	id 'org.springframework.boot' version '2.1.8.RELEASE'
-}
-
-application {
-	mainClass='com.example.mall.EurekaDemoApplication'
-}
-
-group = 'com.example'
-version = '1.0'
-sourceCompatibility = '1.8'
-
-repositories {
-	mavenCentral()
-}
-
-jar {
-	manifest {
-		attributes(
-			'Main-Class' : 'com.example.eurekademo.EurekaDemoApplication',
-		)
-	}
-	from {
-		configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
-	}
-}
-
-dependencies {
-	compile 'org.springframework.boot:spring-boot-starter-web:2.1.8.RELEASE'
-	compile 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-server:2.1.3.RELEASE'
-}
-
-distributions {
-	main {
-		contents {
-			from('src/main/resources') {
-				into 'config'
-			}
-		}
-	}
-}
-
-publishing {
-	publications {
-		zip(MavenPublication) {
-			artifactId 'eureka-demo'
-			artifact source: distZip, extension: 'zip'
-		}
-
-	}
-
+subprojects {
 	repositories {
-		maven {
-			name 'release'
-			credentials {
-				username 'UeNAlf'
-				password 'C3P4NBghkI'
-			}
-			url 'https://repo.rdc.aliyun.com/repository/136689-release-6zHeY2/'
-		}
+		mavenCentral()
 	}
 }
 
-build.dependsOn distZip
-publish.dependsOn build
+//application {
+//	mainClass='com.example.mall.EurekaDemoApplication'
+//}
+
+//group = 'com.example'
+//version = '1.0'
+//sourceCompatibility = '1.8'
+
 
